@@ -1,0 +1,12 @@
+/*
+ * Copyright (c) 2012 cparm <armelcadetpetit@gmail.com>. All rights reserved.
+ *
+ */
+
+#include "libsa.h"
+
+void start(void) asm("start");
+
+void start(void)
+{
+}
